--- a/SkycoApi/SkyCoApi/Web.config
+++ b/SkycoApi/SkyCoApi/Web.config
@@ -191,6 +191,8 @@
     <add name="SkyCoDbContext" connectionString="data source=INGPRADELE_NB\SIPEL;initial catalog=skyco_db;user id=sa;password=sipel515;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
  <!--NoteBook-->
   <!--<add name="SkyCoDbContext" connectionString="data source=FAMILIA-PC\PRADEDEV;initial catalog=skyco_db;user id=sa;password=516euge94324590;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+  <!--Hilaire-->
+    <!--<add name="SkyCoDbContext" connectionString="data source=DESKTOP-DTVBQ9E\JHMESSEROUX;initial catalog=skyco_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
