--- a/SkycoApi/BusinessServices/BusinessServices.csproj
+++ b/SkycoApi/BusinessServices/BusinessServices.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Interfaces\ICityServices.cs" />
     <Compile Include="Interfaces\ICountryServices.cs" />
     <Compile Include="Interfaces\ILocationServices.cs" />
+    <Compile Include="Interfaces\IMovieServices.cs" />
     <Compile Include="Interfaces\IRegisterUserServices.cs" />
     <Compile Include="Interfaces\IStripeCardServices.cs" />
     <Compile Include="Interfaces\IStripeSubscribeServices.cs" />
@@ -110,6 +111,7 @@
     <Compile Include="Interfaces\ISkyco_SubscribeServices.cs" />
     <Compile Include="OwinSecurity\IOwinSecurityService.cs" />
     <Compile Include="OwinSecurity\OwinSecurityServer.cs" />
+    <Compile Include="Patterns\Factories\FactoryMovies.cs" />
     <Compile Include="Patterns\Factories\FactoryPaymentIntent.cs" />
     <Compile Include="Patterns\Factories\FactoryStripeSubscribe.cs" />
     <Compile Include="Patterns\Factories\FactoryPlan.cs" />
@@ -127,6 +129,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Patterns\Factories\FactorySkyco_Phone.cs" />
     <Compile Include="Services\LocationServices.cs" />
+    <Compile Include="Services\MovieServices.cs" />
     <Compile Include="Services\RegisterUserServices.cs" />
     <Compile Include="Services\StripeSubscribeServices.cs" />
     <Compile Include="Services\PlanServices.cs" />
@@ -153,6 +156,10 @@
     <ProjectReference Include="..\Resolver\Resolver.csproj">
       <Project>{0fbe64ba-c24c-4d31-b479-de461176b310}</Project>
       <Name>Resolver</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StreamingVideo\StreamingVideo.csproj">
+      <Project>{714741de-9fab-4561-ba87-cbc78367e9a2}</Project>
+      <Name>StreamingVideo</Name>
     </ProjectReference>
     <ProjectReference Include="..\StripeServices\StripeServices.csproj">
       <Project>{6d350ca7-7895-457a-b2fd-83c7db9fa376}</Project>
