--- a/SkycoApi/BusinessEntities/BusinessEntities.csproj
+++ b/SkycoApi/BusinessEntities/BusinessEntities.csproj
@@ -68,6 +68,7 @@
     <Compile Include="BE\CountryBE.cs" />
     <Compile Include="BE\LocationBE.cs" />
     <Compile Include="BE\ModelObjBE.cs" />
+    <Compile Include="BE\MovieBE.cs" />
     <Compile Include="BE\PaymentIntentBE.cs" />
     <Compile Include="BE\SearchBE.cs" />
     <Compile Include="BE\StripeSubscribeBE.cs" />
