--- a/SkycoApi/SkyCoApi/packages.config
+++ b/SkycoApi/SkyCoApi/packages.config
@@ -50,12 +50,16 @@
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.StaticFiles" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Azure.Management.Media" version="2.0.5" targetFramework="net472" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net472" />
   <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net472" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net472" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net472" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.ApiDescription.Server" version="3.0.0" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net472" />
@@ -72,6 +76,7 @@
   <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.WebEncoders" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.5.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="6.5.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.5.0" targetFramework="net472" />
@@ -82,7 +87,11 @@
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.19" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net472" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="NLog" version="4.7.1" targetFramework="net472" />
@@ -96,21 +105,48 @@
   <package id="Swashbuckle.AspNetCore.SwaggerUI" version="5.3.3" targetFramework="net472" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net472" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net472" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.5.0" targetFramework="net472" />
+  <package id="System.IO" version="4.1.0" targetFramework="net472" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.1.0" targetFramework="net472" />
   <package id="System.Net.Http.Extensions.Compression.Client" version="2.0.2" targetFramework="net472" />
+  <package id="System.Net.Primitives" version="4.0.11" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net472" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net472" />
   <package id="System.Reflection.TypeExtensions" version="4.5.1" targetFramework="net472" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.Serialization.Json" version="4.0.2" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net472" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net472" />
+  <package id="System.Text.Encoding" version="4.0.11" targetFramework="net472" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net472" />
   <package id="System.Text.Json" version="4.6.0" targetFramework="net472" />
+  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="net472" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net472" />
+  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net472" />
+  <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net472" />
   <package id="Tavis.UriTemplates" version="1.1.1" targetFramework="net472" />
+  <package id="TransientFaultHandling.Core" version="5.1.1209.1" targetFramework="net472" />
   <package id="Unity" version="4.0.1" targetFramework="net472" />
   <package id="Unity.Abstractions" version="5.11.5" targetFramework="net472" />
   <package id="Unity.Mvc4" version="1.6.0.0" targetFramework="net472" />
@@ -118,4 +154,6 @@
   <package id="WebActivatorEx" version="2.0" targetFramework="net472" />
   <package id="WebApi.Hal" version="3.1.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
+  <package id="windowsazure.mediaservices" version="4.0.0.4" targetFramework="net472" />
+  <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net472" />
 </packages>
