--- a/SkycoApi/BusinessEntities/BusinessEntities.csproj
+++ b/SkycoApi/BusinessEntities/BusinessEntities.csproj
@@ -70,6 +70,7 @@
     <Compile Include="BE\ModelObjBE.cs" />
     <Compile Include="BE\MovieBE.cs" />
     <Compile Include="BE\PaymentIntentBE.cs" />
+    <Compile Include="BE\PerfilBE.cs" />
     <Compile Include="BE\SearchBE.cs" />
     <Compile Include="BE\StripeSubscribeBE.cs" />
     <Compile Include="BE\PlanBE.cs" />
