--- a/SkycoApi/SkyCoApi/packages.config
+++ b/SkycoApi/SkyCoApi/packages.config
@@ -77,16 +77,19 @@
   <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.WebEncoders" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.1" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.5.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="6.5.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="6.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.7.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.7.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.7.1" targetFramework="net472" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net472" />
   <package id="Microsoft.Net.Http.Headers" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.OpenApi" version="1.1.4" targetFramework="net472" />
-  <package id="Microsoft.Owin" version="4.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Cors" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Jwt" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net472" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.19" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
@@ -111,7 +114,7 @@
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net472" />
   <package id="System.Globalization" version="4.0.11" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="6.5.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.7.1" targetFramework="net472" />
   <package id="System.IO" version="4.1.0" targetFramework="net472" />
   <package id="System.Linq" version="4.1.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
@@ -146,6 +149,7 @@
   <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net472" />
   <package id="Tavis.UriTemplates" version="1.1.1" targetFramework="net472" />
+  <package id="Thinktecture.IdentityModel.Core" version="1.4.0" targetFramework="net472" />
   <package id="TransientFaultHandling.Core" version="5.1.1209.1" targetFramework="net472" />
   <package id="Unity" version="4.0.1" targetFramework="net472" />
   <package id="Unity.Abstractions" version="5.11.5" targetFramework="net472" />
