--- a/SkycoApi/DataModal/DataModal.csproj
+++ b/SkycoApi/DataModal/DataModal.csproj
@@ -71,6 +71,7 @@
     <Compile Include="GenericRepository\ISkyCoGenericRepository.cs" />
     <Compile Include="GenericRepository\SkyCoGenericRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Interface\IPerfilRepository.cs" />
     <Compile Include="Repositories\Interface\IStripeSubscribeRepository.cs" />
     <Compile Include="Repositories\Interface\IPlanRepository.cs" />
     <Compile Include="Repositories\Interface\ISkyco_AccountRepository.cs" />
@@ -85,6 +86,7 @@
     <Compile Include="Repositories\Repository\CityRepository.cs" />
     <Compile Include="Repositories\Repository\CountryRepository.cs" />
     <Compile Include="Repositories\Repository\LocationRepository.cs" />
+    <Compile Include="Repositories\Repository\PerfilRepository.cs" />
     <Compile Include="Repositories\Repository\StripeSubscribeRepository.cs" />
     <Compile Include="Repositories\Repository\PlanRepository.cs" />
     <Compile Include="Repositories\Repository\Skyco_AccountRepository.cs" />
