--- a/SkycoApi/StreamingVideo/packages.config
+++ b/SkycoApi/StreamingVideo/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net461" />
+  <package id="modernhttpclient" version="2.4.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="RestSharp" version="106.6.10" targetFramework="net461" />
   <package id="System.Collections" version="4.0.11" targetFramework="net461" />
