--- a/SkycoApi/StreamingVideo/packages.config
+++ b/SkycoApi/StreamingVideo/packages.config
@@ -1,45 +1,56 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
-  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net461" />
-  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net461" />
-  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.1" targetFramework="net461" />
-  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="3.0.5" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.8.4" targetFramework="net461" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.4" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.8" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.8.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.8.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.8.0" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.22" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.19" targetFramework="net461" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net461" />
   <package id="modernhttpclient" version="2.4.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="RestSharp" version="106.6.10" targetFramework="net461" />
-  <package id="System.Collections" version="4.0.11" targetFramework="net461" />
-  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net461" />
-  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net461" />
-  <package id="System.Globalization" version="4.0.11" targetFramework="net461" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.205111437" targetFramework="net461" />
-  <package id="System.IO" version="4.1.0" targetFramework="net461" />
-  <package id="System.Linq" version="4.1.0" targetFramework="net461" />
-  <package id="System.Net.Http" version="4.1.0" targetFramework="net461" />
-  <package id="System.Net.Primitives" version="4.0.11" targetFramework="net461" />
-  <package id="System.Reflection" version="4.1.0" targetFramework="net461" />
-  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net461" />
-  <package id="System.Runtime" version="4.1.0" targetFramework="net461" />
-  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net461" />
-  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net461" />
-  <package id="System.Runtime.Serialization.Json" version="4.0.2" targetFramework="net461" />
-  <package id="System.Runtime.Serialization.Primitives" version="4.1.1" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net461" />
-  <package id="System.Spatial" version="5.6.4" targetFramework="net461" />
-  <package id="System.Text.Encoding" version="4.0.11" targetFramework="net461" />
-  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net461" />
-  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="net461" />
-  <package id="System.Threading" version="4.0.11" targetFramework="net461" />
-  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net461" />
-  <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net461" />
-  <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net461" />
+  <package id="RestSharp" version="106.11.7" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net461" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.8.0" targetFramework="net461" />
+  <package id="System.IO" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
+  <package id="System.Net.Primitives" version="4.3.1" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Serialization.Json" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
+  <package id="System.Spatial" version="5.8.4" targetFramework="net461" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net461" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="TransientFaultHandling.Core" version="5.1.1209.1" targetFramework="net461" />
-  <package id="windowsazure.mediaservices" version="4.0.0.4" targetFramework="net461" />
-  <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net461" />
+  <package id="windowsazure.mediaservices" version="4.2.0" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net461" />
 </packages>
