--- a/SkycoApi/BusinessServices/BusinessServices.csproj
+++ b/SkycoApi/BusinessServices/BusinessServices.csproj
@@ -111,14 +111,20 @@
     <Compile Include="Interfaces\ISkyco_SubscribeServices.cs" />
     <Compile Include="OwinSecurity\IOwinSecurityService.cs" />
     <Compile Include="OwinSecurity\OwinSecurityServer.cs" />
+    <Compile Include="Patterns\Factories\FactoryLarge.cs" />
     <Compile Include="Patterns\Factories\FactoryFilms.cs" />
+    <Compile Include="Patterns\Factories\FactoryHit.cs" />
+    <Compile Include="Patterns\Factories\FactoryMedium.cs" />
     <Compile Include="Patterns\Factories\FactoryMovies.cs" />
     <Compile Include="Patterns\Factories\FactoryPerfil.cs" />
+    <Compile Include="Patterns\Factories\FactorySmall.cs" />
     <Compile Include="Patterns\Factories\FactoryStripeSubscribe.cs" />
     <Compile Include="Patterns\Factories\FactoryPlan.cs" />
     <Compile Include="Patterns\Factories\FactoryPricePlan.cs" />
     <Compile Include="Patterns\Factories\FactorySkyco_AccountType.cs" />
     <Compile Include="Patterns\Factories\FactorySkyco_Address.cs" />
+    <Compile Include="Patterns\Factories\FactoryTiny.cs" />
+    <Compile Include="Patterns\Factories\FactoryVideo.cs" />
     <Compile Include="Services\CityServices.cs" />
     <Compile Include="Services\CountryServices.cs" />
     <Compile Include="Patterns\Factories\FactoryCity.cs" />
