--- a/SkycoApi/StreamingVideo/StreamingVideo.csproj
+++ b/SkycoApi/StreamingVideo/StreamingVideo.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Hasseware.Net.TMDb, Version=1.3.0.0, Culture=neutral, PublicKeyToken=4d204bf90cffca75, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hasseware.TheMovieDB.1.3.0.0\lib\net45\Hasseware.Net.TMDb.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Azure.KeyVault.Core, Version=3.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Azure.KeyVault.Core.3.0.5\lib\net461\Microsoft.Azure.KeyVault.Core.dll</HintPath>
     </Reference>
@@ -164,9 +167,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class\BaseVideo.cs" />
+    <Compile Include="Class\Large.cs" />
+    <Compile Include="Class\Medium.cs" />
     <Compile Include="Class\ModelObj.cs" />
     <Compile Include="Class\Movie.cs" />
     <Compile Include="Class\Search.cs" />
+    <Compile Include="Class\Hits.cs" />
+    <Compile Include="Class\Small.cs" />
+    <Compile Include="Class\Tiny.cs" />
+    <Compile Include="Class\Videos.cs" />
     <Compile Include="InterfaceMovies\IMoviesService.cs" />
     <Compile Include="Model\Movies.cs" />
     <Compile Include="MovieServices\AzureMovieServices.cs" />
