--- a/SkycoApi/StreamingVideo/packages.config
+++ b/SkycoApi/StreamingVideo/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Hasseware.TheMovieDB" version="1.3.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.Azure.KeyVault.Core" version="3.0.5" targetFramework="net461" />
   <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net461" />
